--- a/Pages/pasteleria.html
+++ b/Pages/pasteleria.html
@@ -22,7 +22,7 @@
                         <div class="d-flex align-items-center">
                             <div class="col-md-3"> 
                                 <div>
-                                    <a href="Index.html">
+                                    <a href="/Index.html">
                                         <img src="/Icons/Logo.png" class="animate__animated animate__backInLeft img-fluid" alt="logo" id="logo">
                                     </a>
                                 </div>
@@ -115,7 +115,7 @@
             <div class="column">
                 <div class="card text-bg-dark mt-5 ms-1 me-1 text-center"  id="card1">
                     <img src="/Images/11Milhojas.jpg" class="card-img" alt="Milhojas">
-                    <h5 class="card-title">Milhojas</h5>
+                    <h5 class="card-title">Milhojas $99 un.</h5>
                     <p class="card-text">
                         Bizcochos surtidos, puede elegir dulces o salados
                     </p>
