--- a/Index.html
+++ b/Index.html
@@ -9,7 +9,7 @@
     <title>PanaderiaKala</title>
     <link rel="icon" href="../PanaderiaKalaV4/Icons/Logo.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/Pages/style.css">
     <meta name="description" content="Panaderia ubicada en montevideo, panaderia fresca, venta de pan, amasado tradicional, uso de masa madre y hojaldre elaborados con buenas materias primas">
     <meta name="keywords" content="PANADERIA, PAN, MASA MADRE, PANADERIA FRANCESA, BIZCOCHERIA, BIZCOCHOS, PASTELERIA">
 </head>
