--- a/Pages/francesa.html
+++ b/Pages/francesa.html
@@ -22,7 +22,7 @@
                         <div class="d-flex align-items-center">
                             <div class="col-md-3"> 
                                 <div>
-                                    <a href="Index.html">
+                                    <a href="/Index.html">
                                         <img src="/Icons/Logo.png" class="animate__animated animate__backInLeft img-fluid" alt="logo" id="logo">
                                     </a>
                                 </div>
