--- a/Pages/clasica.html
+++ b/Pages/clasica.html
@@ -138,7 +138,7 @@
             </div>
         </div>
         <div class="mt-5 d-flex justify-content-center botonatras">
-            <a href="Index.html" class="btn btn-primary parrafocard" style="max-width: 100px; min-width: 100px;">
+            <a href="/index.html" class="btn btn-primary parrafocard" style="max-width: 100px; min-width: 100px;">
                 Atrás
             </a>
         </div>
