--- a/Index.html
+++ b/Index.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>PanaderiaKala</title>
-    <link rel="icon" href="../PanaderiaKalaV4/Icons/Logo.png">
+    <link rel="icon" href="Icons/Logo.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <link rel="stylesheet" href="/Pages/style.css">
+    <link rel="stylesheet" href="Pages/style.css">
     <meta name="description" content="Panaderia ubicada en montevideo, panaderia fresca, venta de pan, amasado tradicional, uso de masa madre y hojaldre elaborados con buenas materias primas">
     <meta name="keywords" content="PANADERIA, PAN, MASA MADRE, PANADERIA FRANCESA, BIZCOCHERIA, BIZCOCHOS, PASTELERIA">
 </head>
@@ -23,7 +23,7 @@
                         <div class="col-md-3"> 
                             <div>
                                 <a href="Index.html">
-                                    <img src="/Icons/Logo.png" class="animate__animated animate__backInLeft img-fluid" alt="logo" id="logo">
+                                    <img src="Icons/Logo.png" class="animate__animated animate__backInLeft img-fluid" alt="logo" id="logo">
                                 </a>
                             </div>
                         </div>
@@ -42,10 +42,10 @@
         <div class="row justify-content-around">
             <div class="column">
                 <div class="card text-bg-dark mt-5 ms-1 me-1 text-center">
-                    <img src="/Images/03Baguette.jpg" class="card-img" alt="PanaderiaClasica">
+                    <img src="Images/03Baguette.jpg" class="card-img" alt="PanaderiaClasica">
                     <div class="card-img-overlay align-items-center d-flex justify-content-center">
                         <button class="btn bg-transparent me-2" type="button">
-                            <a class="nav-link active" aria-current="page" href="/Pages/clasica.html">
+                            <a class="nav-link active" aria-current="page" href="Pages/clasica.html">
                                 <h2>
                                     Panadería Clásica
                                 </h2>
@@ -56,10 +56,10 @@
             </div>
             <div class="column">
                 <div class="card text-bg-dark mt-5 ms-1 me-1 text-center">
-                    <img src="/Images/05BaguetteRustica.jpg" class="card-img" alt="PanaderiaClasica">
+                    <img src="Images/05BaguetteRustica.jpg" class="card-img" alt="PanaderiaClasica">
                     <div class="card-img-overlay align-items-center d-flex justify-content-center">
                         <button class="btn bg-transparent me-2" type="button">
-                            <a class="nav-link active" aria-current="page" href="/Pages/madre.html">
+                            <a class="nav-link active" aria-current="page" href="Pages/madre.html">
                                 <h2>
                                     Panadería Masa Madre
                                 </h2>
@@ -70,10 +70,10 @@
             </div>
             <div class="column">
                 <div class="card text-bg-dark mt-5 ms-1 me-1 text-center">
-                    <img src="/Images/07Croissant.jpg" class="card-img" alt="PanaderiaClasica">
+                    <img src="Images/07Croissant.jpg" class="card-img" alt="PanaderiaClasica">
                     <div class="card-img-overlay align-items-center d-flex justify-content-center">
                         <button class="btn bg-transparent me-2" type="button">
-                            <a class="nav-link active" aria-current="page" href="/Pages/francesa.html">
+                            <a class="nav-link active" aria-current="page" href="Pages/francesa.html">
                                 <h2>
                                     Panadería Francesa
                                 </h2>
@@ -84,10 +84,10 @@
             </div>
             <div class="column">
                 <div class="card text-bg-dark mt-5 ms-1 me-1 text-center">
-                    <img src="/Images/09Bizcochos.jpg" class="card-img" alt="PanaderiaClasica">
+                    <img src="Images/09Bizcochos.jpg" class="card-img" alt="PanaderiaClasica">
                     <div class="card-img-overlay align-items-center d-flex justify-content-center">
                         <button class="btn bg-transparent me-2" type="button">
-                            <a class="nav-link active" aria-current="page" href="/Pages/bizcocheria.html">
+                            <a class="nav-link active" aria-current="page" href="Pages/bizcocheria.html">
                                 <h2>
                                     Bizcochería
                                 </h2>
@@ -98,10 +98,10 @@
             </div>
             <div class="column">
                 <div class="card text-bg-dark mt-5 ms-1 me-1 text-center">
-                    <img src="/Images/11Milhojas.jpg" class="card-img" alt="PanaderiaClasica">
+                    <img src="Images/11Milhojas.jpg" class="card-img" alt="PanaderiaClasica">
                     <div class="card-img-overlay align-items-center d-flex justify-content-center">
                         <button class="btn bg-transparent me-2" type="button">
-                            <a class="nav-link active" aria-current="page" href="/Pages/pasteleria.html">
+                            <a class="nav-link active" aria-current="page" href="Pages/pasteleria.html">
                                 <h2>
                                     Pastelería
                                 </h2>
@@ -112,7 +112,7 @@
             </div>
             <div class="column" id="proximamente">
                 <div class="card text-bg-dark mt-5 ms-1 me-1 text-center">
-                    <img src="/Images/proximamente.jpg" class="card-img" alt="PanaderiaClasica">
+                    <img src="Images/proximamente.jpg" class="card-img" alt="PanaderiaClasica">
                 </div>
             </div>
           </div>
