--- a/Pages/clasica.html
+++ b/Pages/clasica.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>PanaderiaKalaClasica</title>
-    <link rel="icon" href="../PanaderiaKalaV4/Icons/Logo.png">
+    <link rel="icon" href="Icons/Logo.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <meta name="description" content="Panaderia ubicada en montevideo, panaderia francesa, venta de baguette, venta de pan tortuga, elaborado en el día">
@@ -22,7 +22,7 @@
                         <div class="d-flex align-items-center">
                             <div class="col-md-3"> 
                                 <div>
-                                    <a href="/Index.html">
+                                    <a href="/index.html">
                                         <img src="/Icons/Logo.png" class="animate__animated animate__backInLeft img-fluid" alt="logo" id="logo">
                                     </a>
                                 </div>
@@ -42,10 +42,10 @@
         <div class="row justify-content-around">
             <div class="column">
                 <div class="card text-bg-dark mt-5 ms-1 me-1 text-center">
-                    <img src="/Images/03Baguette.jpg" class="card-img" alt="PanaderiaClasica">
+                    <img src="../Images/03Baguette.jpg" class="card-img" alt="PanaderiaClasica">
                     <div class="card-img-overlay align-items-center d-flex justify-content-center">
                         <button class="btn bg-transparent me-2" type="button">
-                            <a class="nav-link active" aria-current="page" href="/Pages/clasica.html">
+                            <a class="nav-link active" aria-current="page" href="clasica.html">
                                 <h2>
                                     Panadería Clásica
                                 </h2>
@@ -56,10 +56,10 @@
             </div>
             <div class="column">
                 <div class="card text-bg-dark mt-5 ms-1 me-1 text-center">
-                    <img src="/Images/05BaguetteRustica.jpg" class="card-img" alt="PanaderiaClasica">
+                    <img src="../Images/05BaguetteRustica.jpg" class="card-img" alt="PanaderiaClasica">
                     <div class="card-img-overlay align-items-center d-flex justify-content-center">
                         <button class="btn bg-transparent me-2" type="button">
-                            <a class="nav-link active" aria-current="page" href="/Pages/madre.html">
+                            <a class="nav-link active" aria-current="page" href="madre.html">
                                 <h2>
                                     Panadería Masa Madre
                                 </h2>
@@ -70,10 +70,10 @@
             </div>
             <div class="column">
                 <div class="card text-bg-dark mt-5 ms-1 me-1 text-center">
-                    <img src="/Images/07Croissant.jpg" class="card-img" alt="PanaderiaClasica">
+                    <img src="../Images/07Croissant.jpg" class="card-img" alt="PanaderiaClasica">
                     <div class="card-img-overlay align-items-center d-flex justify-content-center">
                         <button class="btn bg-transparent me-2" type="button">
-                            <a class="nav-link active" aria-current="page" href="/Pages/francesa.html">
+                            <a class="nav-link active" aria-current="page" href="francesa.html">
                                 <h2>
                                     Panadería Francesa
                                 </h2>
@@ -84,10 +84,10 @@
             </div>
             <div class="column">
                 <div class="card text-bg-dark mt-5 ms-1 me-1 text-center">
-                    <img src="/Images/09Bizcochos.jpg" class="card-img" alt="PanaderiaClasica">
+                    <img src="../Images/09Bizcochos.jpg" class="card-img" alt="PanaderiaClasica">
                     <div class="card-img-overlay align-items-center d-flex justify-content-center">
                         <button class="btn bg-transparent me-2" type="button">
-                            <a class="nav-link active" aria-current="page" href="/Pages/bizcocheria.html">
+                            <a class="nav-link active" aria-current="page" href="bizcocheria.html">
                                 <h2>
                                     Bizcochería
                                 </h2>
@@ -98,10 +98,10 @@
             </div>
             <div class="column">
                 <div class="card text-bg-dark mt-5 ms-1 me-1 text-center">
-                    <img src="/Images/11Milhojas.jpg" class="card-img" alt="PanaderiaClasica">
+                    <img src="../Images/11Milhojas.jpg" class="card-img" alt="PanaderiaClasica">
                     <div class="card-img-overlay align-items-center d-flex justify-content-center">
                         <button class="btn bg-transparent me-2" type="button">
-                            <a class="nav-link active" aria-current="page" href="/Pages/pasteleria.html">
+                            <a class="nav-link active" aria-current="page" href="pasteleria.html">
                                 <h2>
                                     Pastelería
                                 </h2>
@@ -114,7 +114,7 @@
         <div class="row justify-content-around" id="navegacion">
             <div class="column">
                 <div class="card text-bg-dark mt-5 ms-1 me-1 text-center"  id="card1">
-                    <img src="/Images/03Baguette.jpg" class="card-img" alt="Baguette">
+                    <img src="../Images/03Baguette.jpg" class="card-img" alt="Baguette">
                     <h5 class="card-title">Baguette $59 un.</h5>
                     <p class="card-text">
                         Pan con corteza crocante. Largo aprox. 50cms
@@ -126,7 +126,7 @@
             </div>
             <div class="column">
                 <div class="card text-bg-dark mt-5 ms-1 me-1 text-center"  id="card2">
-                    <img src="/Images/04PanTortuga.jpg" class="card-img" alt="PanTortuga">
+                    <img src="../Images/04PanTortuga.jpg" class="card-img" alt="PanTortuga">
                     <h5 class="card-title">Pan tortuga $20 un.</h5>
                     <p class="card-text">
                         Pan de textura elástica. Diámetro aprox. 10cms
@@ -138,7 +138,7 @@
             </div>
         </div>
         <div class="mt-5 d-flex justify-content-center botonatras">
-            <a href="/index.html" class="btn btn-primary parrafocard" style="max-width: 100px; min-width: 100px;">
+            <a href="index.html" class="btn btn-primary parrafocard" style="max-width: 100px; min-width: 100px;">
                 Atrás
             </a>
         </div>
