--- a/Pages/madre.html
+++ b/Pages/madre.html
@@ -22,8 +22,8 @@
                         <div class="d-flex align-items-center">
                             <div class="col-md-3"> 
                                 <div>
-                                    <a href="/Index.html">
-                                        <img src="/Icons/Logo.png" class="animate__animated animate__backInLeft img-fluid" alt="logo" id="logo">
+                                    <a href="../index.html">
+                                        <img src="../Logo.png" class="animate__animated animate__backInLeft img-fluid" alt="logo" id="logo">
                                     </a>
                                 </div>
                             </div>
@@ -138,7 +138,7 @@
             </div>
         </div>
         <div class="mt-5 d-flex justify-content-center botonatras">
-            <a href="/index.html" class="btn btn-primary parrafocard" style="max-width: 100px; min-width: 100px;">
+            <a href="../index.html" class="btn btn-primary parrafocard" style="max-width: 100px; min-width: 100px;">
                 Atrás
             </a>
         </div>
