--- a/Pages/francesa.html
+++ b/Pages/francesa.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>PanaderiaKalaClasica</title>
-    <link rel="icon" href="../PanaderiaKalaV4/Icons/Logo.png">
+    <link rel="icon" href="Logo.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <meta name="description" content="Panaderia ubicada en montevideo, panaderia con hojaldre, masa de hojaldre, hojaldre de manteca, venta de croissant, venta de pan de chocolate, elaborado en el día">
@@ -23,7 +23,7 @@
                             <div class="col-md-3"> 
                                 <div>
                                     <a href="/Index.html">
-                                        <img src="/Icons/Logo.png" class="animate__animated animate__backInLeft img-fluid" alt="logo" id="logo">
+                                        <img src="../Logo.png" class="animate__animated animate__backInLeft img-fluid" alt="logo" id="logo">
                                     </a>
                                 </div>
                             </div>
@@ -42,7 +42,7 @@
         <div class="row justify-content-around">
             <div class="column">
                 <div class="card text-bg-dark mt-5 ms-1 me-1 text-center">
-                    <img src="/Images/03Baguette.jpg" class="card-img" alt="PanaderiaClasica">
+                    <img src="../Images/03Baguette.jpg" class="card-img" alt="PanaderiaClasica">
                     <div class="card-img-overlay align-items-center d-flex justify-content-center">
                         <button class="btn bg-transparent me-2" type="button">
                             <a class="nav-link active" aria-current="page" href="/Pages/clasica.html">
