--- a/index.html
+++ b/index.html
@@ -15,108 +15,110 @@
 </head>
 <body>
     <div class="wrapper">
-    <header>
-        <div class="container-fluid">
-            <div class="row">
-                <div  class="d-flex justify-content-center">
-                    <div class="d-flex align-items-center">
-                        <div class="col-md-3"> 
-                            <div>
-                                <a href="Index.html">
-                                    <img src="Logo.png" class="animate__animated animate__backInLeft img-fluid" alt="logo" id="logo">
+        <header>
+            <div class="container-fluid">
+                <div class="row">
+                    <div  class="d-flex justify-content-center">
+                        <div class="d-flex align-items-center">
+                            <div class="col-md-3"> 
+                                <div>
+                                    <a href="Index.html">
+                                        <img src="Logo.png" class="animate__animated animate__backInLeft img-fluid" alt="logo" id="logo">
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="col-md-9">
+                                <div class="badge text-wrap" style="width: 100%">
+                                    <h1 class="tituloAnimacion text-center">
+                                        Panaderia Kala
+                                    </h1>
+                                </div>
+                            </div>
+                        </div>    
+                    </div>
+                </div>
+            </div>
+        </header>
+        <section>
+            <div class="row justify-content-around">
+                <div class="column">
+                    <div class="card text-bg-dark mt-5 ms-1 me-1 text-center">
+                        <img src="Images/03Baguette.jpg" class="card-img" alt="PanaderiaClasica">
+                            <div class="card-img-overlay align-items-center d-flex justify-content-center">
+                                <button class="btn bg-transparent me-2" type="button">
+                                    <a class="nav-link active" aria-current="page" href="Pages/clasica.html">
+                                        <h2>
+                                            Panadería Clásica
+                                        </h2>
+                                    </a>
+                                </button>
+                            </div>
+                    </div>
+                </div>
+                <div class="column">
+                    <div class="card text-bg-dark mt-5 ms-1 me-1 text-center">
+                        <img src="Images/05BaguetteRustica.jpg" class="card-img" alt="PanaderiaClasica">
+                        <div class="card-img-overlay align-items-center d-flex justify-content-center">
+                            <button class="btn bg-transparent me-2" type="button">
+                                <a class="nav-link active" aria-current="page" href="Pages/madre.html">
+                                    <h2>
+                                        Panadería Masa Madre
+                                    </h2>
                                 </a>
-                            </div>
+                            </button>
                         </div>
-                        <div class="col-md-9">
-                            <div class="badge text-wrap" style="width: 100%">
-                                <h1 class="tituloAnimacion text-center">
-                                    Panaderia Kala
-                                </h1>
-                            </div>
+                    </div>
+                </div>
+                <div class="column">
+                    <div class="card text-bg-dark mt-5 ms-1 me-1 text-center">
+                        <img src="Images/07Croissant.jpg" class="card-img" alt="PanaderiaClasica">
+                        <div class="card-img-overlay align-items-center d-flex justify-content-center">
+                            <button class="btn bg-transparent me-2" type="button">
+                                <a class="nav-link active" aria-current="page" href="Pages/francesa.html">
+                                    <h2>
+                                        Panadería Francesa
+                                    </h2>
+                                </a>
+                            </button>
                         </div>
-                    </div>    
+                    </div>
+                </div>
+                <div class="column">
+                    <div class="card text-bg-dark mt-5 ms-1 me-1 text-center">
+                        <img src="Images/09Bizcochos.jpg" class="card-img" alt="PanaderiaClasica">
+                        <div class="card-img-overlay align-items-center d-flex justify-content-center">
+                            <button class="btn bg-transparent me-2" type="button">
+                                <a class="nav-link active" aria-current="page" href="Pages/bizcocheria.html">
+                                    <h2>
+                                        Bizcochería
+                                    </h2>
+                                </a>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <div class="column">
+                    <div class="card text-bg-dark mt-5 ms-1 me-1 text-center">
+                        <img src="Images/11Milhojas.jpg" class="card-img" alt="PanaderiaClasica">
+                        <div class="card-img-overlay align-items-center d-flex justify-content-center">
+                            <button class="btn bg-transparent me-2" type="button">
+                                <a class="nav-link active" aria-current="page" href="Pages/pasteleria.html">
+                                    <h2>
+                                        Pastelería
+                                    </h2>
+                                </a>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <div class="column" id="proximamente">
+                    <div class="card text-bg-dark mt-5 ms-1 me-1 text-center">
+                        <img src="Images/proximamente.jpg" class="card-img" alt="PanaderiaClasica">
+                    </div>
                 </div>
             </div>
         </div>
-    </header>
-        <div class="row justify-content-around">
-            <div class="column">
-                <div class="card text-bg-dark mt-5 ms-1 me-1 text-center">
-                    <img src="Images/03Baguette.jpg" class="card-img" alt="PanaderiaClasica">
-                    <div class="card-img-overlay align-items-center d-flex justify-content-center">
-                        <button class="btn bg-transparent me-2" type="button">
-                            <a class="nav-link active" aria-current="page" href="Pages/clasica.html">
-                                <h2>
-                                    Panadería Clásica
-                                </h2>
-                            </a>
-                        </button>
-                    </div>
-                </div>
-            </div>
-            <div class="column">
-                <div class="card text-bg-dark mt-5 ms-1 me-1 text-center">
-                    <img src="Images/05BaguetteRustica.jpg" class="card-img" alt="PanaderiaClasica">
-                    <div class="card-img-overlay align-items-center d-flex justify-content-center">
-                        <button class="btn bg-transparent me-2" type="button">
-                            <a class="nav-link active" aria-current="page" href="Pages/madre.html">
-                                <h2>
-                                    Panadería Masa Madre
-                                </h2>
-                            </a>
-                        </button>
-                    </div>
-                </div>
-            </div>
-            <div class="column">
-                <div class="card text-bg-dark mt-5 ms-1 me-1 text-center">
-                    <img src="Images/07Croissant.jpg" class="card-img" alt="PanaderiaClasica">
-                    <div class="card-img-overlay align-items-center d-flex justify-content-center">
-                        <button class="btn bg-transparent me-2" type="button">
-                            <a class="nav-link active" aria-current="page" href="Pages/francesa.html">
-                                <h2>
-                                    Panadería Francesa
-                                </h2>
-                            </a>
-                        </button>
-                    </div>
-                </div>
-            </div>
-            <div class="column">
-                <div class="card text-bg-dark mt-5 ms-1 me-1 text-center">
-                    <img src="Images/09Bizcochos.jpg" class="card-img" alt="PanaderiaClasica">
-                    <div class="card-img-overlay align-items-center d-flex justify-content-center">
-                        <button class="btn bg-transparent me-2" type="button">
-                            <a class="nav-link active" aria-current="page" href="Pages/bizcocheria.html">
-                                <h2>
-                                    Bizcochería
-                                </h2>
-                            </a>
-                        </button>
-                    </div>
-                </div>
-            </div>
-            <div class="column">
-                <div class="card text-bg-dark mt-5 ms-1 me-1 text-center">
-                    <img src="Images/11Milhojas.jpg" class="card-img" alt="PanaderiaClasica">
-                    <div class="card-img-overlay align-items-center d-flex justify-content-center">
-                        <button class="btn bg-transparent me-2" type="button">
-                            <a class="nav-link active" aria-current="page" href="Pages/pasteleria.html">
-                                <h2>
-                                    Pastelería
-                                </h2>
-                            </a>
-                        </button>
-                    </div>
-                </div>
-            </div>
-            <div class="column" id="proximamente">
-                <div class="card text-bg-dark mt-5 ms-1 me-1 text-center">
-                    <img src="Images/proximamente.jpg" class="card-img" alt="PanaderiaClasica">
-                </div>
-            </div>
-          </div>
-        </div>
+        </section>
         <footer class="footerIndex">
             <div class="container-fluid">
                 <div class="row d-flex flex-column">
