--- a/Pages/clasica.html
+++ b/Pages/clasica.html
@@ -39,109 +39,113 @@
                 </div>
             </div>
         </header>
-        <div class="row justify-content-around">
-            <div class="column">
-                <div class="card text-bg-dark mt-5 ms-1 me-1 text-center">
-                    <img src="../Images/03Baguette.jpg" class="card-img" alt="PanaderiaClasica">
-                    <div class="card-img-overlay align-items-center d-flex justify-content-center">
-                        <button class="btn bg-transparent me-2" type="button">
-                            <a class="nav-link active" aria-current="page" href="clasica.html">
-                                <h2>
-                                    Panadería Clásica
-                                </h2>
-                            </a>
-                        </button>
+        <section>
+            <div class="row justify-content-around">
+                <div class="column">
+                    <div class="card text-bg-dark mt-5 ms-1 me-1 text-center">
+                        <img src="../Images/03Baguette.jpg" class="card-img" alt="PanaderiaClasica">
+                        <div class="card-img-overlay align-items-center d-flex justify-content-center">
+                            <button class="btn bg-transparent me-2" type="button">
+                                <a class="nav-link active" aria-current="page" href="clasica.html">
+                                    <h2>
+                                        Panadería Clásica
+                                    </h2>
+                                </a>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <div class="column">
+                    <div class="card text-bg-dark mt-5 ms-1 me-1 text-center">
+                        <img src="../Images/05BaguetteRustica.jpg" class="card-img" alt="PanaderiaClasica">
+                        <div class="card-img-overlay align-items-center d-flex justify-content-center">
+                            <button class="btn bg-transparent me-2" type="button">
+                                <a class="nav-link active" aria-current="page" href="madre.html">
+                                    <h2>
+                                        Panadería Masa Madre
+                                    </h2>
+                                </a>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <div class="column">
+                    <div class="card text-bg-dark mt-5 ms-1 me-1 text-center">
+                        <img src="../Images/07Croissant.jpg" class="card-img" alt="PanaderiaClasica">
+                        <div class="card-img-overlay align-items-center d-flex justify-content-center">
+                            <button class="btn bg-transparent me-2" type="button">
+                                <a class="nav-link active" aria-current="page" href="francesa.html">
+                                    <h2>
+                                        Panadería Francesa
+                                    </h2>
+                                </a>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <div class="column">
+                    <div class="card text-bg-dark mt-5 ms-1 me-1 text-center">
+                        <img src="../Images/09Bizcochos.jpg" class="card-img" alt="PanaderiaClasica">
+                        <div class="card-img-overlay align-items-center d-flex justify-content-center">
+                            <button class="btn bg-transparent me-2" type="button">
+                                <a class="nav-link active" aria-current="page" href="bizcocheria.html">
+                                    <h2>
+                                        Bizcochería
+                                    </h2>
+                                </a>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <div class="column">
+                    <div class="card text-bg-dark mt-5 ms-1 me-1 text-center">
+                        <img src="../Images/11Milhojas.jpg" class="card-img" alt="PanaderiaClasica">
+                        <div class="card-img-overlay align-items-center d-flex justify-content-center">
+                            <button class="btn bg-transparent me-2" type="button">
+                                <a class="nav-link active" aria-current="page" href="pasteleria.html">
+                                    <h2>
+                                        Pastelería
+                                    </h2>
+                                </a>
+                            </button>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="column">
-                <div class="card text-bg-dark mt-5 ms-1 me-1 text-center">
-                    <img src="../Images/05BaguetteRustica.jpg" class="card-img" alt="PanaderiaClasica">
-                    <div class="card-img-overlay align-items-center d-flex justify-content-center">
-                        <button class="btn bg-transparent me-2" type="button">
-                            <a class="nav-link active" aria-current="page" href="madre.html">
-                                <h2>
-                                    Panadería Masa Madre
-                                </h2>
-                            </a>
-                        </button>
+        </section>
+        <section>
+            <div class="row justify-content-around" id="navegacion">
+                <div class="column">
+                    <div class="card text-bg-dark mt-5 ms-1 me-1 text-center"  id="card1">
+                        <img src="../Images/03Baguette.jpg" class="card-img" alt="Baguette">
+                        <h5 class="card-title">Baguette $59 un.</h5>
+                        <p class="card-text">
+                            Pan con corteza crocante. Largo aprox. 50cms
+                        </p>
+                        <a href="#" class="btn btn-primary parrafocard">
+                            Comprar
+                        </a>
+                    </div>
+                </div>
+                <div class="column">
+                    <div class="card text-bg-dark mt-5 ms-1 me-1 text-center"  id="card2">
+                        <img src="../Images/04PanTortuga.jpg" class="card-img" alt="PanTortuga">
+                        <h5 class="card-title">Pan tortuga $20 un.</h5>
+                        <p class="card-text">
+                            Pan de textura elástica. Diámetro aprox. 10cms
+                        </p>
+                        <a href="#" class="btn btn-primary parrafocard">
+                            Comprar
+                        </a>
                     </div>
                 </div>
             </div>
-            <div class="column">
-                <div class="card text-bg-dark mt-5 ms-1 me-1 text-center">
-                    <img src="../Images/07Croissant.jpg" class="card-img" alt="PanaderiaClasica">
-                    <div class="card-img-overlay align-items-center d-flex justify-content-center">
-                        <button class="btn bg-transparent me-2" type="button">
-                            <a class="nav-link active" aria-current="page" href="francesa.html">
-                                <h2>
-                                    Panadería Francesa
-                                </h2>
-                            </a>
-                        </button>
-                    </div>
-                </div>
+            <div class="mt-5 d-flex justify-content-center botonatras">
+                <a href="../index.html" class="btn btn-primary parrafocard" style="max-width: 100px; min-width: 100px;">
+                    Atrás
+                </a>
             </div>
-            <div class="column">
-                <div class="card text-bg-dark mt-5 ms-1 me-1 text-center">
-                    <img src="../Images/09Bizcochos.jpg" class="card-img" alt="PanaderiaClasica">
-                    <div class="card-img-overlay align-items-center d-flex justify-content-center">
-                        <button class="btn bg-transparent me-2" type="button">
-                            <a class="nav-link active" aria-current="page" href="bizcocheria.html">
-                                <h2>
-                                    Bizcochería
-                                </h2>
-                            </a>
-                        </button>
-                    </div>
-                </div>
-            </div>
-            <div class="column">
-                <div class="card text-bg-dark mt-5 ms-1 me-1 text-center">
-                    <img src="../Images/11Milhojas.jpg" class="card-img" alt="PanaderiaClasica">
-                    <div class="card-img-overlay align-items-center d-flex justify-content-center">
-                        <button class="btn bg-transparent me-2" type="button">
-                            <a class="nav-link active" aria-current="page" href="pasteleria.html">
-                                <h2>
-                                    Pastelería
-                                </h2>
-                            </a>
-                        </button>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="row justify-content-around" id="navegacion">
-            <div class="column">
-                <div class="card text-bg-dark mt-5 ms-1 me-1 text-center"  id="card1">
-                    <img src="../Images/03Baguette.jpg" class="card-img" alt="Baguette">
-                    <h5 class="card-title">Baguette $59 un.</h5>
-                    <p class="card-text">
-                        Pan con corteza crocante. Largo aprox. 50cms
-                    </p>
-                    <a href="#" class="btn btn-primary parrafocard">
-                        Comprar
-                    </a>
-                </div>
-            </div>
-            <div class="column">
-                <div class="card text-bg-dark mt-5 ms-1 me-1 text-center"  id="card2">
-                    <img src="../Images/04PanTortuga.jpg" class="card-img" alt="PanTortuga">
-                    <h5 class="card-title">Pan tortuga $20 un.</h5>
-                    <p class="card-text">
-                        Pan de textura elástica. Diámetro aprox. 10cms
-                    </p>
-                    <a href="#" class="btn btn-primary parrafocard">
-                        Comprar
-                    </a>
-                </div>
-            </div>
-        </div>
-        <div class="mt-5 d-flex justify-content-center botonatras">
-            <a href="../index.html" class="btn btn-primary parrafocard" style="max-width: 100px; min-width: 100px;">
-                Atrás
-            </a>
-        </div>
+        </section>
         <footer>
             <div class="container-fluid">
                 <div class="row d-flex flex-column">
