--- a/Pages/francesa.html
+++ b/Pages/francesa.html
@@ -22,7 +22,7 @@
                         <div class="d-flex align-items-center">
                             <div class="col-md-3"> 
                                 <div>
-                                    <a href="/Index.html">
+                                    <a href="../index.html">
                                         <img src="../Logo.png" class="animate__animated animate__backInLeft img-fluid" alt="logo" id="logo">
                                     </a>
                                 </div>
@@ -56,7 +56,7 @@
             </div>
             <div class="column">
                 <div class="card text-bg-dark mt-5 ms-1 me-1 text-center">
-                    <img src="/Images/05BaguetteRustica.jpg" class="card-img" alt="PanaderiaClasica">
+                    <img src="../Images/05BaguetteRustica.jpg" class="card-img" alt="PanaderiaClasica">
                     <div class="card-img-overlay align-items-center d-flex justify-content-center">
                         <button class="btn bg-transparent me-2" type="button">
                             <a class="nav-link active" aria-current="page" href="/Pages/madre.html">
@@ -70,7 +70,7 @@
             </div>
             <div class="column">
                 <div class="card text-bg-dark mt-5 ms-1 me-1 text-center">
-                    <img src="/Images/07Croissant.jpg" class="card-img" alt="PanaderiaClasica">
+                    <img src="../Images/07Croissant.jpg" class="card-img" alt="PanaderiaClasica">
                     <div class="card-img-overlay align-items-center d-flex justify-content-center">
                         <button class="btn bg-transparent me-2" type="button">
                             <a class="nav-link active" aria-current="page" href="/Pages/francesa.html">
@@ -84,7 +84,7 @@
             </div>
             <div class="column">
                 <div class="card text-bg-dark mt-5 ms-1 me-1 text-center">
-                    <img src="/Images/09Bizcochos.jpg" class="card-img" alt="PanaderiaClasica">
+                    <img src="../Images/09Bizcochos.jpg" class="card-img" alt="PanaderiaClasica">
                     <div class="card-img-overlay align-items-center d-flex justify-content-center">
                         <button class="btn bg-transparent me-2" type="button">
                             <a class="nav-link active" aria-current="page" href="/Pages/bizcocheria.html">
@@ -98,7 +98,7 @@
             </div>
             <div class="column">
                 <div class="card text-bg-dark mt-5 ms-1 me-1 text-center">
-                    <img src="/Images/11Milhojas.jpg" class="card-img" alt="PanaderiaClasica">
+                    <img src="../Images/11Milhojas.jpg" class="card-img" alt="PanaderiaClasica">
                     <div class="card-img-overlay align-items-center d-flex justify-content-center">
                         <button class="btn bg-transparent me-2" type="button">
                             <a class="nav-link active" aria-current="page" href="/Pages/pasteleria.html">
@@ -114,7 +114,7 @@
         <div class="row justify-content-around" id="navegacion">
             <div class="column">
                 <div class="card text-bg-dark mt-5 ms-1 me-1 text-center"  id="card1">
-                    <img src="/Images/07Croissant.jpg" class="card-img" alt="Croissant">
+                    <img src="../Images/07Croissant.jpg" class="card-img" alt="Croissant">
                     <h5 class="card-title">Croissant $99 un.</h5>
                     <p class="card-text">
                         Masa 100% hojaldre. Peso aproximado 100 grs.
@@ -126,7 +126,7 @@
             </div>
             <div class="column">
                 <div class="card text-bg-dark mt-5 ms-1 me-1 text-center"  id="card2">
-                    <img src="/Images/08PainAuChocolat.jpg" class="card-img" alt="PanDeChocolate">
+                    <img src="../Images/08PainAuChocolat.jpg" class="card-img" alt="PanDeChocolate">
                     <h5 class="card-title">Pan de chocolate $129 un.</h5>
                     <p class="card-text">
                         Masa de hojaldre con relleno de chocolate. Peso aproximado 120 grs                    
