--- a/Pages/clasica.html
+++ b/Pages/clasica.html
@@ -39,7 +39,7 @@
                 </div>
             </div>
         </header>
-        <section>
+        <nav>
             <div class="row justify-content-around">
                 <div class="column">
                     <div class="card text-bg-dark mt-5 ms-1 me-1 text-center">
@@ -112,7 +112,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </nav>
         <section>
             <div class="row justify-content-around" id="navegacion">
                 <div class="column">
