--- a/Pages/francesa.html
+++ b/Pages/francesa.html
@@ -39,109 +39,113 @@
                 </div>
             </div>
         </header>
-        <div class="row justify-content-around">
-            <div class="column">
-                <div class="card text-bg-dark mt-5 ms-1 me-1 text-center">
-                    <img src="../Images/03Baguette.jpg" class="card-img" alt="PanaderiaClasica">
-                    <div class="card-img-overlay align-items-center d-flex justify-content-center">
-                        <button class="btn bg-transparent me-2" type="button">
-                            <a class="nav-link active" aria-current="page" href="/Pages/clasica.html">
-                                <h2>
-                                    Panadería Clásica
-                                </h2>
-                            </a>
-                        </button>
+        <nav>
+            <div class="row justify-content-around">
+                <div class="column">
+                    <div class="card text-bg-dark mt-5 ms-1 me-1 text-center">
+                        <img src="../Images/03Baguette.jpg" class="card-img" alt="PanaderiaClasica">
+                        <div class="card-img-overlay align-items-center d-flex justify-content-center">
+                            <button class="btn bg-transparent me-2" type="button">
+                                <a class="nav-link active" aria-current="page" href="/Pages/clasica.html">
+                                    <h2>
+                                        Panadería Clásica
+                                    </h2>
+                                </a>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <div class="column">
+                    <div class="card text-bg-dark mt-5 ms-1 me-1 text-center">
+                        <img src="../Images/05BaguetteRustica.jpg" class="card-img" alt="PanaderiaClasica">
+                        <div class="card-img-overlay align-items-center d-flex justify-content-center">
+                            <button class="btn bg-transparent me-2" type="button">
+                                <a class="nav-link active" aria-current="page" href="/Pages/madre.html">
+                                    <h2>
+                                        Panadería Masa Madre
+                                    </h2>
+                                </a>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <div class="column">
+                    <div class="card text-bg-dark mt-5 ms-1 me-1 text-center">
+                        <img src="../Images/07Croissant.jpg" class="card-img" alt="PanaderiaClasica">
+                        <div class="card-img-overlay align-items-center d-flex justify-content-center">
+                            <button class="btn bg-transparent me-2" type="button">
+                                <a class="nav-link active" aria-current="page" href="/Pages/francesa.html">
+                                    <h2>
+                                        Panadería Francesa
+                                    </h2>
+                                </a>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <div class="column">
+                    <div class="card text-bg-dark mt-5 ms-1 me-1 text-center">
+                        <img src="../Images/09Bizcochos.jpg" class="card-img" alt="PanaderiaClasica">
+                        <div class="card-img-overlay align-items-center d-flex justify-content-center">
+                            <button class="btn bg-transparent me-2" type="button">
+                                <a class="nav-link active" aria-current="page" href="/Pages/bizcocheria.html">
+                                    <h2>
+                                        Bizcochería
+                                    </h2>
+                                </a>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <div class="column">
+                    <div class="card text-bg-dark mt-5 ms-1 me-1 text-center">
+                        <img src="../Images/11Milhojas.jpg" class="card-img" alt="PanaderiaClasica">
+                        <div class="card-img-overlay align-items-center d-flex justify-content-center">
+                            <button class="btn bg-transparent me-2" type="button">
+                                <a class="nav-link active" aria-current="page" href="/Pages/pasteleria.html">
+                                    <h2>
+                                        Pastelería
+                                    </h2>
+                                </a>
+                            </button>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="column">
-                <div class="card text-bg-dark mt-5 ms-1 me-1 text-center">
-                    <img src="../Images/05BaguetteRustica.jpg" class="card-img" alt="PanaderiaClasica">
-                    <div class="card-img-overlay align-items-center d-flex justify-content-center">
-                        <button class="btn bg-transparent me-2" type="button">
-                            <a class="nav-link active" aria-current="page" href="/Pages/madre.html">
-                                <h2>
-                                    Panadería Masa Madre
-                                </h2>
-                            </a>
-                        </button>
+        </nav>
+        <section>
+            <div class="row justify-content-around" id="navegacion">
+                <div class="column">
+                    <div class="card text-bg-dark mt-5 ms-1 me-1 text-center"  id="card1">
+                        <img src="../Images/07Croissant.jpg" class="card-img" alt="Croissant">
+                        <h5 class="card-title">Croissant $99 un.</h5>
+                        <p class="card-text">
+                            Masa 100% hojaldre. Peso aproximado 100 grs.
+                        </p>
+                        <a href="#" class="btn btn-primary parrafocard">
+                            Comprar
+                        </a>
+                    </div>
+                </div>
+                <div class="column">
+                    <div class="card text-bg-dark mt-5 ms-1 me-1 text-center"  id="card2">
+                        <img src="../Images/08PainAuChocolat.jpg" class="card-img" alt="PanDeChocolate">
+                        <h5 class="card-title">Pan de chocolate $129 un.</h5>
+                        <p class="card-text">
+                            Masa de hojaldre con relleno de chocolate. Peso aproximado 120 grs                    
+                        </p>
+                        <a href="#" class="btn btn-primary parrafocard">
+                            Comprar
+                        </a>
                     </div>
                 </div>
             </div>
-            <div class="column">
-                <div class="card text-bg-dark mt-5 ms-1 me-1 text-center">
-                    <img src="../Images/07Croissant.jpg" class="card-img" alt="PanaderiaClasica">
-                    <div class="card-img-overlay align-items-center d-flex justify-content-center">
-                        <button class="btn bg-transparent me-2" type="button">
-                            <a class="nav-link active" aria-current="page" href="/Pages/francesa.html">
-                                <h2>
-                                    Panadería Francesa
-                                </h2>
-                            </a>
-                        </button>
-                    </div>
-                </div>
+            <div class="mt-5 d-flex justify-content-center botonatras">
+                <a href="../index.html" class="btn btn-primary parrafocard" style="max-width: 100px; min-width: 100px;">
+                    Atrás
+                </a>
             </div>
-            <div class="column">
-                <div class="card text-bg-dark mt-5 ms-1 me-1 text-center">
-                    <img src="../Images/09Bizcochos.jpg" class="card-img" alt="PanaderiaClasica">
-                    <div class="card-img-overlay align-items-center d-flex justify-content-center">
-                        <button class="btn bg-transparent me-2" type="button">
-                            <a class="nav-link active" aria-current="page" href="/Pages/bizcocheria.html">
-                                <h2>
-                                    Bizcochería
-                                </h2>
-                            </a>
-                        </button>
-                    </div>
-                </div>
-            </div>
-            <div class="column">
-                <div class="card text-bg-dark mt-5 ms-1 me-1 text-center">
-                    <img src="../Images/11Milhojas.jpg" class="card-img" alt="PanaderiaClasica">
-                    <div class="card-img-overlay align-items-center d-flex justify-content-center">
-                        <button class="btn bg-transparent me-2" type="button">
-                            <a class="nav-link active" aria-current="page" href="/Pages/pasteleria.html">
-                                <h2>
-                                    Pastelería
-                                </h2>
-                            </a>
-                        </button>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="row justify-content-around" id="navegacion">
-            <div class="column">
-                <div class="card text-bg-dark mt-5 ms-1 me-1 text-center"  id="card1">
-                    <img src="../Images/07Croissant.jpg" class="card-img" alt="Croissant">
-                    <h5 class="card-title">Croissant $99 un.</h5>
-                    <p class="card-text">
-                        Masa 100% hojaldre. Peso aproximado 100 grs.
-                    </p>
-                    <a href="#" class="btn btn-primary parrafocard">
-                        Comprar
-                    </a>
-                </div>
-            </div>
-            <div class="column">
-                <div class="card text-bg-dark mt-5 ms-1 me-1 text-center"  id="card2">
-                    <img src="../Images/08PainAuChocolat.jpg" class="card-img" alt="PanDeChocolate">
-                    <h5 class="card-title">Pan de chocolate $129 un.</h5>
-                    <p class="card-text">
-                        Masa de hojaldre con relleno de chocolate. Peso aproximado 120 grs                    
-                    </p>
-                    <a href="#" class="btn btn-primary parrafocard">
-                        Comprar
-                    </a>
-                </div>
-            </div>
-        </div>
-        <div class="mt-5 d-flex justify-content-center botonatras">
-            <a href="../index.html" class="btn btn-primary parrafocard" style="max-width: 100px; min-width: 100px;">
-                Atrás
-            </a>
-        </div>
+        </section>
         <footer>
             <div class="container-fluid">
                 <div class="row d-flex flex-column">
@@ -158,7 +162,7 @@
                 </div>
             </div>
         </footer>
-    </div>   
+    </div>    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
 </html>
