--- a/Pages/pasteleria.html
+++ b/Pages/pasteleria.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>PanaderiaKalaClasica</title>
-    <link rel="icon" href="../PanaderiaKalaV4/Icons/Logo.png">
+    <link rel="icon" href="../Logo.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <meta name="description" content="Panaderia ubicada en montevideo, trabajos de pasteleria, postre milhojas con masa de hojaldre relleno de dulce de leche, crema pastelera">
@@ -22,7 +22,7 @@
                         <div class="d-flex align-items-center">
                             <div class="col-md-3"> 
                                 <div>
-                                    <a href="/Index.html">
+                                    <a href="../index.html">
                                         <img src="../Logo.png" class="animate__animated animate__backInLeft img-fluid" alt="logo" id="logo">
                                     </a>
                                 </div>
@@ -39,109 +39,113 @@
                 </div>
             </div>
         </header>
-        <div class="row justify-content-around">
-            <div class="column">
-                <div class="card text-bg-dark mt-5 ms-1 me-1 text-center">
-                    <img src="/Images/03Baguette.jpg" class="card-img" alt="PanaderiaClasica">
-                    <div class="card-img-overlay align-items-center d-flex justify-content-center">
-                        <button class="btn bg-transparent me-2" type="button">
-                            <a class="nav-link active" aria-current="page" href="/Pages/clasica.html">
-                                <h2>
-                                    Panadería Clásica
-                                </h2>
-                            </a>
-                        </button>
+        <nav>
+            <div class="row justify-content-around">
+                <div class="column">
+                    <div class="card text-bg-dark mt-5 ms-1 me-1 text-center">
+                        <img src="../Images/03Baguette.jpg" class="card-img" alt="PanaderiaClasica">
+                        <div class="card-img-overlay align-items-center d-flex justify-content-center">
+                            <button class="btn bg-transparent me-2" type="button">
+                                <a class="nav-link active" aria-current="page" href="/Pages/clasica.html">
+                                    <h2>
+                                        Panadería Clásica
+                                    </h2>
+                                </a>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <div class="column">
+                    <div class="card text-bg-dark mt-5 ms-1 me-1 text-center">
+                        <img src="../Images/05BaguetteRustica.jpg" class="card-img" alt="PanaderiaClasica">
+                        <div class="card-img-overlay align-items-center d-flex justify-content-center">
+                            <button class="btn bg-transparent me-2" type="button">
+                                <a class="nav-link active" aria-current="page" href="/Pages/madre.html">
+                                    <h2>
+                                        Panadería Masa Madre
+                                    </h2>
+                                </a>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <div class="column">
+                    <div class="card text-bg-dark mt-5 ms-1 me-1 text-center">
+                        <img src="../Images/07Croissant.jpg" class="card-img" alt="PanaderiaClasica">
+                        <div class="card-img-overlay align-items-center d-flex justify-content-center">
+                            <button class="btn bg-transparent me-2" type="button">
+                                <a class="nav-link active" aria-current="page" href="/Pages/francesa.html">
+                                    <h2>
+                                        Panadería Francesa
+                                    </h2>
+                                </a>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <div class="column">
+                    <div class="card text-bg-dark mt-5 ms-1 me-1 text-center">
+                        <img src="../Images/09Bizcochos.jpg" class="card-img" alt="PanaderiaClasica">
+                        <div class="card-img-overlay align-items-center d-flex justify-content-center">
+                            <button class="btn bg-transparent me-2" type="button">
+                                <a class="nav-link active" aria-current="page" href="/Pages/bizcocheria.html">
+                                    <h2>
+                                        Bizcochería
+                                    </h2>
+                                </a>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <div class="column">
+                    <div class="card text-bg-dark mt-5 ms-1 me-1 text-center">
+                        <img src="../Images/11Milhojas.jpg" class="card-img" alt="PanaderiaClasica">
+                        <div class="card-img-overlay align-items-center d-flex justify-content-center">
+                            <button class="btn bg-transparent me-2" type="button">
+                                <a class="nav-link active" aria-current="page" href="/Pages/pasteleria.html">
+                                    <h2>
+                                        Pastelería
+                                    </h2>
+                                </a>
+                            </button>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="column">
-                <div class="card text-bg-dark mt-5 ms-1 me-1 text-center">
-                    <img src="/Images/05BaguetteRustica.jpg" class="card-img" alt="PanaderiaClasica">
-                    <div class="card-img-overlay align-items-center d-flex justify-content-center">
-                        <button class="btn bg-transparent me-2" type="button">
-                            <a class="nav-link active" aria-current="page" href="/Pages/madre.html">
-                                <h2>
-                                    Panadería Masa Madre
-                                </h2>
-                            </a>
-                        </button>
+        </nav>
+        <section>
+            <div class="row justify-content-around" id="navegacion">
+                <div class="column">
+                    <div class="card text-bg-dark mt-5 ms-1 me-1 text-center"  id="card1">
+                        <img src="../Images/11Milhojas.jpg" class="card-img" alt="Milhojas">
+                        <h5 class="card-title">Milhojas $99 un.</h5>
+                        <p class="card-text">
+                            Bizcochos surtidos, puede elegir dulces o salados
+                        </p>
+                        <a href="#" class="btn btn-primary parrafocard">
+                            Comprar
+                        </a>
+                    </div>
+                </div>
+                <div class="column">
+                    <div class="card text-bg-dark mt-5 ms-1 me-1 text-center"  id="card2">
+                        <img src="../Images/proximamente.jpg" class="card-img" alt="Proximamente">
+                        <h5 class="card-title">Próximamente</h5>
+                        <p class="card-text">
+                            En breve estaremos sumando nuevos productos a nuestro catálogo de panadería                    
+                        </p>
+                        <a href="#" class="btn btn-primary parrafocard">
+                        Gracias!
+                        </a>
                     </div>
                 </div>
             </div>
-            <div class="column">
-                <div class="card text-bg-dark mt-5 ms-1 me-1 text-center">
-                    <img src="/Images/07Croissant.jpg" class="card-img" alt="PanaderiaClasica">
-                    <div class="card-img-overlay align-items-center d-flex justify-content-center">
-                        <button class="btn bg-transparent me-2" type="button">
-                            <a class="nav-link active" aria-current="page" href="/Pages/francesa.html">
-                                <h2>
-                                    Panadería Francesa
-                                </h2>
-                            </a>
-                        </button>
-                    </div>
-                </div>
+            <div class="mt-5 d-flex justify-content-center botonatras">
+                <a href="../index.html" class="btn btn-primary parrafocard" style="max-width: 100px; min-width: 100px;">
+                    Atrás
+                </a>
             </div>
-            <div class="column">
-                <div class="card text-bg-dark mt-5 ms-1 me-1 text-center">
-                    <img src="/Images/09Bizcochos.jpg" class="card-img" alt="PanaderiaClasica">
-                    <div class="card-img-overlay align-items-center d-flex justify-content-center">
-                        <button class="btn bg-transparent me-2" type="button">
-                            <a class="nav-link active" aria-current="page" href="/Pages/bizcocheria.html">
-                                <h2>
-                                    Bizcochería
-                                </h2>
-                            </a>
-                        </button>
-                    </div>
-                </div>
-            </div>
-            <div class="column">
-                <div class="card text-bg-dark mt-5 ms-1 me-1 text-center">
-                    <img src="/Images/11Milhojas.jpg" class="card-img" alt="PanaderiaClasica">
-                    <div class="card-img-overlay align-items-center d-flex justify-content-center">
-                        <button class="btn bg-transparent me-2" type="button">
-                            <a class="nav-link active" aria-current="page" href="/Pages/pasteleria.html">
-                                <h2>
-                                    Pastelería
-                                </h2>
-                            </a>
-                        </button>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="row justify-content-around" id="navegacion">
-            <div class="column">
-                <div class="card text-bg-dark mt-5 ms-1 me-1 text-center"  id="card1">
-                    <img src="/Images/11Milhojas.jpg" class="card-img" alt="Milhojas">
-                    <h5 class="card-title">Milhojas $99 un.</h5>
-                    <p class="card-text">
-                        Bizcochos surtidos, puede elegir dulces o salados
-                    </p>
-                    <a href="#" class="btn btn-primary parrafocard">
-                        Comprar
-                    </a>
-                </div>
-            </div>
-            <div class="column">
-                <div class="card text-bg-dark mt-5 ms-1 me-1 text-center"  id="card2">
-                    <img src="/Images/proximamente.jpg" class="card-img" alt="Proximamente">
-                    <h5 class="card-title">Próximamente</h5>
-                    <p class="card-text">
-                        En breve estaremos sumando nuevos productos a nuestro catálogo de panadería                    
-                    </p>
-                    <a href="#" class="btn btn-primary parrafocard">
-                       Gracias!
-                    </a>
-                </div>
-            </div>
-        </div>
-        <div class="mt-5 d-flex justify-content-center botonatras">
-            <a href="../index.html" class="btn btn-primary parrafocard" style="max-width: 100px; min-width: 100px;">
-                Atrás
-            </a>
-        </div>
+        </section>
         <footer>
             <div class="container-fluid">
                 <div class="row d-flex flex-column">
