--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 </head>
 <body>
     <div class="wrapper">
+        <!-- Encabezado -->
         <header>
             <div class="container-fluid">
                 <div class="row">
@@ -39,6 +40,7 @@
                 </div>
             </div>
         </header>
+        <!-- Menú navegación -->
         <section>
             <div class="row justify-content-around">
                 <div class="column">
@@ -119,6 +121,7 @@
             </div>
         </div>
         </section>
+        <!-- Pie de página con social media -->
         <footer class="footerIndex">
             <div class="container-fluid">
                 <div class="row d-flex flex-column">
