--- a/Pages/bizcocheria.html
+++ b/Pages/bizcocheria.html
@@ -15,6 +15,7 @@
 </head>
 <body>
     <div class="wrapper">
+        <!-- Encabezado -->
         <header>
             <div class="container-fluid">
                 <div class="row">
@@ -39,6 +40,7 @@
                 </div>
             </div>
         </header>
+        <!-- Menú navegación -->
         <nav>
             <div class="row justify-content-around">
                 <div class="column">
@@ -113,6 +115,7 @@
                 </div>
             </div>
         </nav>
+        <!-- Sección compras -->
         <section>
             <div class="row justify-content-around" id="navegacion">
                 <div class="column">
